--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -3,28 +3,28 @@ name: Build on Windows
 on:
   push:
     branches: [ "main" ]
-    paths:
-      - '.github/workflows/build-windows.yml'
-      - 'cmake/**'
-      - 'external/**'
-      - 'include/**'
-      - 'public/**'
-      - 'src/**'
-      - 'CMakeLists.txt'
-      - 'CMakePresets.json'
-      - 'trigger-build.txt'
+    #paths:
+    #  - '.github/workflows/build-windows.yml'
+    #  - 'cmake/**'
+    #  - 'external/**'
+    #  - 'include/**'
+    #  - 'public/**'
+    #  - 'src/**'
+    #  - 'CMakeLists.txt'
+    #  - 'CMakePresets.json'
+    #  - 'trigger-build.txt'
   pull_request:
     branches: [ "main" ]
-    paths:
-      - '.github/workflows/build-windows.yml'
-      - 'cmake/**'
-      - 'external/**'
-      - 'include/**'
-      - 'public/**'
-      - 'src/**'
-      - 'CMakeLists.txt'
-      - 'CMakePresets.json'
-      - 'trigger-build.txt'
+    #paths:
+    #  - '.github/workflows/build-windows.yml'
+    #  - 'cmake/**'
+    #  - 'external/**'
+    #  - 'include/**'
+    #  - 'public/**'
+    #  - 'src/**'
+    #  - 'CMakeLists.txt'
+    #  - 'CMakePresets.json'
+    #  - 'trigger-build.txt'
 
 env:
   SOURCESDK_DIR: external\sourcesdk
