--- a/.gitmodules
+++ b/.gitmodules
@@ -21,7 +21,8 @@
 	url = https://github.com/Wend4r/s2u-concat.git
 [submodule "GameData"]
 	path = external/gamedata
-	url = https://github.com/Wend4r/s2u-gamedata.git
+	url = https://github.com/2vg/s2u-gamedata.git
+	branch = dev
 [submodule "Logger"]
 	path = external/logger
 	url = https://github.com/Wend4r/s2u-logger.git
