--- a/.gitmodules
+++ b/.gitmodules
@@ -18,7 +18,8 @@
 	url = https://github.com/Wend4r/s2u-any_config.git
 [submodule "Concat"]
 	path = external/concat
-	url = https://github.com/Wend4r/s2u-concat.git
+	url = https://github.com/2vg/s2u-concat.git
+	branch = dev
 [submodule "GameData"]
 	path = external/gamedata
 	url = https://github.com/2vg/s2u-gamedata.git
