--- a/.github/workflows/build-linux.yml
+++ b/.github/workflows/build-linux.yml
@@ -82,7 +82,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y ninja-build ${{ matrix.compiler.cc }}
+        sudo apt-get install -y ninja-build build-essential libpthread-stubs0-dev ${{ matrix.compiler.cc }}
 
     - name: Set up environment variables
       run: |
